dml files: enhancement on defaulting file value during view detail for dropify

--- a/devtemplate/assets/css/style.css
+++ b/devtemplate/assets/css/style.css
@@ -7492,3 +7492,7 @@ select.form-control:not([size]):not([multiple]){
 .report-label{
   font-size: 1.2rem;
 }
+
+.no-style-button{
+  width:unset;height:unset;color:unset;border:none;background:none;
+}
