--- a/devtemplate/templates/summary_dashboard_templateDV.html
+++ b/devtemplate/templates/summary_dashboard_templateDV.html
@@ -1,128 +1,137 @@
 <!-- Edit this file to change the layout of the detail view form -->
 
 <a name="detail-view"></a>
-<div class="panel-heading"><h3 class="panel-title"><strong><%%DETAIL_VIEW_TITLE%%></strong></h3></div>
+<div class="panel-heading"></div>
 
-<div class="panel-body" id="summary_dashboard_dv_container">
+<div id="summary_dashboard_dv_container">
 	<!-- child links -->
-	<div class="row vspacer-md">
+	<!-- <div class="row vspacer-md"> -->
 		<div class="col-xs-12">
 			<div class="clearfix"></div>
 		</div>
-	</div>
-	<hr class="hidden-xs hidden-sm">
+	<!-- </div> -->
+	<!-- <hr class="hidden-xs hidden-sm"> -->
 
+
+<div id="summary_dashboard_dv_form">
 	<div class="row">
-		<!-- form inputs -->
-		<div class="col-md-8 col-lg-10" id="summary_dashboard_dv_form">
-			<fieldset class="form-horizontal">
 
-				<div class="form-group">
-					<hr class="hidden-md hidden-lg">
-					<label for="id" class="control-label col-lg-3">ID</label>
-					<div class="col-lg-9">
+				<div class="form-group col-lg-1">
+					<!-- <hr class="hidden-md hidden-lg"> -->
+					<label for="id" class="control-label">ID</label>
+					<!-- <div class="col-lg-9"> -->
 						<div class="form-control-static" id="id"><%%VALUE(id)%%></div>
-					</div>
+					<!-- </div> ^^id^^ -->
 				</div>
-
-				<div class="form-group">
-					<hr class="hidden-md hidden-lg">
-					<label for="ot_ap_Date" class="control-label col-lg-3">Date</label>
-					<div class="col-lg-9">
+				<!-- ^^div-manualid^^ -->
+				<div class="form-group col-lg-3">
+					<!-- <hr class="hidden-md hidden-lg"> ^^inside-div-manualid^^-->
+					<label for="ot_ap_Date" class="control-label">Date</label>
+					<!-- <div class="col-lg-9"> -->
 						<div class="form-control-static" id="ot_ap_Date"><%%COMBOTEXT(ot_ap_Date)%%></div>
-					</div>
+					<!-- </div> -->
 				</div>
-
-				<div class="form-group">
-					<hr class="hidden-md hidden-lg">
-					<label for="fo_Section_Caption" class="control-label col-lg-3">Section</label>
-					<div class="col-lg-9">
+				<!-- ^^div-manualtitle^^ -->
+				<div class="form-group col-lg-8">
+					<!-- <hr class="hidden-md hidden-lg"> ^^inside-div-manualtitle^^-->
+					<label for="fo_Section_Caption" class="control-label">Section</label>
+					<!-- <div class="col-lg-9"> -->
 						<div class="form-control-static" id="fo_Section_Caption"><%%VALUE(fo_Section_Caption)%%></div>
-					</div>
+					<!-- </div> -->
 				</div>
+	</div>
 
-				<div class="form-group">
+	<ul class="nav nav-tabs customtab2 d-block w-100" role="tablist">
+		<li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#Description" role="tab" class="not-active"><span class="hidden-sm-up"></span> <span class="hidden-xs-down">Description</span></a> </li>
+
+	</ul>
+
+	<div class="tab-content w-100">
+		<div class="tab-pane p-t-30 active show" id="Description" role="tabpanel">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_TotalDisplayField" class="control-label col-lg-3">Field <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_TotalDisplayField-description"></i></label>
-					<div class="col-lg-9">
+					<label for="fo_TotalDisplayField" class="control-label col-lg-2">Field <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_TotalDisplayField-description"></i></label>
+					<div class="col-lg-10">
 						<span class="help-block collapse" id="fo_TotalDisplayField-description"><div class="alert alert-info">Display Field for Total Count</div></span>
 
 						<div class="form-control-static" id="fo_TotalDisplayField"><%%VALUE(fo_TotalDisplayField)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_TotalCount" class="control-label col-lg-3">Total Count</label>
-					<div class="col-lg-9">
+					<label for="fo_TotalCount" class="control-label col-lg-2">Total Count</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_TotalCount"><%%VALUE(fo_TotalCount)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_ReviewCount" class="control-label col-lg-3">Review Count</label>
-					<div class="col-lg-9">
+					<label for="fo_ReviewCount" class="control-label col-lg-2">Review Count</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_ReviewCount"><%%VALUE(fo_ReviewCount)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_ApprovalCount" class="control-label col-lg-3">Approval Count</label>
-					<div class="col-lg-9">
+					<label for="fo_ApprovalCount" class="control-label col-lg-2">Approval Count</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_ApprovalCount"><%%VALUE(fo_ApprovalCount)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_IMSControlCount" class="control-label col-lg-3">IMS Control Count</label>
-					<div class="col-lg-9">
+					<label for="fo_IMSControlCount" class="control-label col-lg-2">IMS Control Count</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_IMSControlCount"><%%VALUE(fo_IMSControlCount)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_CustomDisplayField1" class="control-label col-lg-3">Custom Display Field 1 <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_CustomDisplayField1-description"></i></label>
-					<div class="col-lg-9">
+					<label for="fo_CustomDisplayField1" class="control-label col-lg-2">Custom Display Field 1 <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_CustomDisplayField1-description"></i></label>
+					<div class="col-lg-10">
 						<span class="help-block collapse" id="fo_CustomDisplayField1-description"><div class="alert alert-info">For example, Project Man-hours for Projects Register table</div></span>
 
 						<input maxlength="100" type="text" class="form-control" name="fo_CustomDisplayField1" id="fo_CustomDisplayField1" value="<%%VALUE(fo_CustomDisplayField1)%%>">
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_CustomDisplayValue1" class="control-label col-lg-3">Custom 1</label>
-					<div class="col-lg-9">
+					<label for="fo_CustomDisplayValue1" class="control-label col-lg-2">Custom 1</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_CustomDisplayValue1"><%%VALUE(fo_CustomDisplayValue1)%%></div>
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_CustomDisplayField2" class="control-label col-lg-3">Custom Display Field 2 <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_CustomDisplayField2-description"></i></label>
-					<div class="col-lg-9">
+					<label for="fo_CustomDisplayField2" class="control-label col-lg-2">Custom Display Field 2 <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#fo_CustomDisplayField2-description"></i></label>
+					<div class="col-lg-10">
 						<span class="help-block collapse" id="fo_CustomDisplayField2-description"><div class="alert alert-info">For example, Average task completion period for Projects Register table</div></span>
 
 						<input maxlength="100" type="text" class="form-control" name="fo_CustomDisplayField2" id="fo_CustomDisplayField2" value="<%%VALUE(fo_CustomDisplayField2)%%>">
 					</div>
 				</div>
 
-				<div class="form-group">
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="fo_CustomDisplayValue2" class="control-label col-lg-3">Custom 2</label>
-					<div class="col-lg-9">
+					<label for="fo_CustomDisplayValue2" class="control-label col-lg-2">Custom 2</label>
+					<div class="col-lg-10">
 						<div class="form-control-static" id="fo_CustomDisplayValue2"><%%VALUE(fo_CustomDisplayValue2)%%></div>
 					</div>
 				</div>
-
-				<div class="form-group">
+		</div>
+	</div>
+<!--
+				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
-					<label for="ot_ap_lastmodified" class="control-label col-lg-3">Last modified <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#ot_ap_lastmodified-description"></i></label>
-					<div class="col-lg-9">
+					<label for="ot_ap_lastmodified" class="control-label col-lg-2">Last modified <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#ot_ap_lastmodified-description"></i></label>
+					<div class="col-lg-10">
 						<span class="help-block collapse" id="ot_ap_lastmodified-description"><div class="alert alert-info">This field is automatically populated with the date and time when this record was last modified.</div></span>
 
 						<div class="form-control-static" id="ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></div>
@@ -131,30 +140,44 @@
 
 			</fieldset>
 		</div>
-
+-->
 		<!-- DV action buttons -->
 		<hr class="hidden-md hidden-lg">
-		<div class="col-md-4 col-lg-2" id="summary_dashboard_dv_action_buttons">
-			<div class="btn-toolbar">
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%UPDATE_BUTTON%%>
-				</div><p></p>
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%DESELECT_BUTTON%%>
-					<%%DVPRINT_BUTTON%%>
-					<%%DELETE_BUTTON%%>
-				</div><p></p>
-				<div class="btn-group-vertical btn-group-lg" style="width: 100%;">
-					<%%INSERT_BUTTON%%>
-				</div>
-			</div>
+	<div id="adminActions" class="adminActions"> <!-- <div class="col-md-4 col-lg-2" id="summary_dashboard_dv_action_buttons"> -->
+		<input type="checkbox" name="adminToggle" class="adminToggle" />
+		<a class="adminButton" href="#!"><i class="ti-more"></i></a>
+		<div class="adminButtons">
+			<%%CANCELEDIT_BUTTON%%>
+			<%%DESELECT_BUTTON%%>
+			<%%DVPRINT_BUTTON%%>
+			<%%DELETE_BUTTON%%>
+			<%%INSERT_BUTTON%%>
 		</div>
 	</div>
+	<div class="adminActions"style="right:90px; bottom:40px">
+		<%%EDIT_BUTTON%%>
+		<%%UPDATE_BUTTON%%>
+	</div>
+</div>
 
 
 </div><!-- /div class="panel-body" -->
+	<style>
+		input[readonly], input[readonly="readonly"] {
+			border:unset;
+		}
+
+		input[readonly]::-webkit-input-placeholder, input[readonly="readonly"]::-webkit-input-placeholder {
+			color:transparent;
+		}
+
+		input[readonly]:-ms-input-placeholder, input[readonly="readonly"]:-ms-input-placeholder {  
+			color:transparent;
+		}
+
+	</style>
 	<script>
-		$j(function() {
+		$j(function () {
 			var add_new_mode = (!$j('input[name=SelectedID]').val());
 			var embedded_mode = ($j('input[name=Embedded]').val() == 1);
 
@@ -173,11 +196,6 @@
 				$j('select, input[type=text], textarea').not(':disabled').eq(0).focus();
 			}
 
-			$j('form').eq(0).change(function(){
-				if($j(this).data('already_changed')) return;
-				if($j('#deselect').length) $j('#deselect').removeClass('btn-default').addClass('btn-warning').get(0).lastChild.data = " <%%TRANSLATION(Cancel)%%>";
-				$j(this).data('already_changed', true);
-			});
 
 			$j('a[href="<%%TRANSLATION(ImageFolder)%%>"]').click(function(){ /* */ return false; });
 
@@ -244,8 +262,8 @@
 
 
 			/* load admin tools for admin user */
-			if(!add_new_mode){
-				$j('body').append('<div id="admin-tools-appendix"></div>');
+			if (!add_new_mode) {
+				$j('#record-heading').append('<span id="admin-tools-appendix"></span>');
 				$j('#admin-tools-appendix').load(
 					'ajax_admin_tools.php?table=summary_dashboard&id=<%%URLVALUE(id)%%>',
 					function(resp){
@@ -256,9 +274,28 @@
 			}
 
 			/* warn user if 'add new' clicked while unsaved changes exist */
-			$j('#addNew').click(function(){
-				if($j('#deselect.btn-warning').length){
+			$j('#addNew').click(function () {
+				if ($j('#deselect.btn-warning').length) {
 					return confirm('<%%TRANSLATION(discard changes confirm)%%>');
+				}
+			});
+
+			/* initialize dropify */
+			$j(document).ready(function(){
+				var drEvent = [];
+				$j('.dropify').each(function(i, e){
+					drEvent[i] = $j(e).dropify();
+				})
+				for(x=0; x<drEvent.length; x++){
+					drEvent[x].on('dropify.afterClear', function(event, element){
+						calcAttached("attach-documents", "totalDocumentAttached");
+						calcAttached("attach-compressed-folders", "totalCompFolderAttached");
+						calcAttached("attach-images", "totalPhotoAttached");
+					});
+
+					drEvent[x].on('dropify.errors', function(event, element){
+						console.log('Dropify ' + element + ' has errors');
+					});
 				}
 			});
 
