fix for table and detail pages from 50% width of container -> 100%; minor fix for alignment in marketing template

--- a/devtemplate/templates/Marketing_templateDV.html
+++ b/devtemplate/templates/Marketing_templateDV.html
@@ -33,7 +33,7 @@
 						<span class="help-block collapse" id="DocItem-description"><div class="alert alert-info">Title for the generated organizational marketing activities. For Example the title for specific marketing event and activity.</div></span>
 
 						<input maxlength="255" type="text" class="form-control" name="DocItem" id="DocItem" value="<%%VALUE(DocItem)%%>" required>
-					</div>
+					<!-- </div> -->
 				</div>
 				<!-- ^^div-manualid^^ -->
 				<div class="form-group col-lg-3">
