bug fix for admin action button not responding after clicking No for confirm cancel, added aria-labelledby="selectedID" to 7 files

--- a/devtemplate/templates/membership_company_templateDV.html
+++ b/devtemplate/templates/membership_company_templateDV.html
@@ -16,15 +16,15 @@
 <div id="membership_company_dv_form">
 	<div class="row">
 
-				<div class="form-group col-lg-1">
+				<div class="form-group col-lg-2">
 					<!-- <hr class="hidden-md hidden-lg"> -->
-					<label for="compID" class="control-label">CompID</label>
+					<label for="compID" class="control-label" aria-labelledby="selectedID">CompID</label>
 					<!-- <div class="col-lg-9" > -->
 						<input maxlength="40" type="text" class="form-control" name="compID" id="compID" value="<%%VALUE(compID)%%>" required>
 					<!-- </div> ^^id^^ -->
 				</div>
 				<!-- ^^div-manualtitle^^ -->
-				<div class="form-group col-lg-8">
+				<div class="form-group col-lg-7">
 					<!-- <hr class="hidden-md hidden-lg"> ^^inside-div-manualtitle^^-->
 					<label for="fo_Name" class="control-label">Name</label>
 					<!-- <div class="col-lg-9" > -->
