--- a/devtemplate/templates/Approval_templateDV.html
+++ b/devtemplate/templates/Approval_templateDV.html
@@ -92,7 +92,7 @@
 					<hr class="hidden-md hidden-lg">
 					<label for="id" class="control-label col-lg-2">ID</label>
 					<div class="col-lg-10">
-						<div class="form-control-static" id="id"><%%VALUE(id)%%></div>
+						<div class="form-control-static" id="id" aria-labelledby="selectedID"><%%VALUE(id)%%></div>
 					</div>
 				</div>
 
