--- a/devtemplate/templates/WorkOrder_templateDV.html
+++ b/devtemplate/templates/WorkOrder_templateDV.html
@@ -16,7 +16,7 @@
 		<!-- form inputs -->
 				<div class="form-group col-lg-1">
 					<label for="id" class="control-label">ID</label>
-						<div class="form-control-static" id="id" aria-labelledby='selectedID'><%%VALUE(id)%%></div>
+						<div class="form-control-static" id="id" aria-labelledby="selectedID"><%%VALUE(id)%%></div>
 				</div>
 
 				<div class="form-group col-lg-8">
