--- a/devtemplate/templates/summary_dashboard_templateDV.html
+++ b/devtemplate/templates/summary_dashboard_templateDV.html
@@ -20,7 +20,7 @@
 					<!-- <hr class="hidden-md hidden-lg"> -->
 					<label for="id" class="control-label">ID</label>
 					<!-- <div class="col-lg-9"> -->
-						<div class="form-control-static" id="id"><%%VALUE(id)%%></div>
+						<div class="form-control-static" id="id" aria-labelledby="selectedID"><%%VALUE(id)%%></div>
 					<!-- </div> ^^id^^ -->
 				</div>
 				<!-- ^^div-manualid^^ -->
