--- a/devtemplate/templates/IMSControl_templateDV.html
+++ b/devtemplate/templates/IMSControl_templateDV.html
@@ -99,7 +99,7 @@
 				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
 					<label for="Status" class="control-label col-lg-2">Inspection Status<span class="text-danger"><%%TRANSLATION(*)%%></span> <i class="glyphicon glyphicon-info-sign text-info" data-toggle="collapse" data-target="#Status-description"></i></label>
-					<div class="col-lg-10">
+					<div class="col-lg-10 form-control-static">
 						<span class="help-block collapse" id="Status-description"><div class="alert alert-info">QC inspection of the data</div></span>
 
 						<%%COMBO(Status)%%>
