--- a/devtemplate/templates/Approval_templateDV.html
+++ b/devtemplate/templates/Approval_templateDV.html
@@ -99,7 +99,7 @@
 				<div class="form-group row">
 					<hr class="hidden-md hidden-lg">
 					<label for="Status" class="control-label col-lg-2">STATUS<span class="text-danger"><%%TRANSLATION(*)%%></span></label>
-					<div class="col-lg-10">
+					<div class="col-lg-10 form-control-static">
 						<%%COMBO(Status)%%>
 					</div>
 				</div>
